Fix long link word wrap bug
In RTC supplementary data post,
the Google Doc link would break
formatting.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -59,3 +59,7 @@ h2 {
 h3, h3 a {
   font-size: 1.1rem !important;
 }
+
+p {
+  overflow-wrap: break-word;
+}
